--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,14 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@my-nx-monorepo/question-randomizer-auth-feature": [
+        "libs/question-randomizer/auth/feature/src/index.ts"
+      ],
       "@my-nx-monorepo/question-randomizer-auth-shell": [
         "libs/question-randomizer/auth/shell/src/index.ts"
+      ],
+      "@my-nx-monorepo/question-randomizer-data-access": [
+        "libs/question-randomizer/auth/data-access/src/index.ts"
       ]
     }
   },
