--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,7 +23,8 @@
       ],
       "@my-nx-monorepo/question-randomizer-data-access": [
         "libs/question-randomizer/auth/data-access/src/index.ts"
-      ]
+      ],
+      "@my-nx-monorepo/shared-ui": ["libs/shared/ui/shared-ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
