--- a/apps/question-randomizer/project.json
+++ b/apps/question-randomizer/project.json
@@ -39,6 +39,12 @@
               "maximumError": "8kb"
             }
           ],
+          "fileReplacements": [
+            {
+              "replace": "apps/question-randomizer/src/environments/environment.ts",
+              "with": "apps/question-randomizer/src/environments/environment.prod.ts"
+            }
+          ],
           "outputHashing": "all"
         },
         "development": {
