--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,6 +27,9 @@
       "@my-nx-monorepo/question-randomizer-auth-util": [
         "libs/question-randomizer/auth/util/src/index.ts"
       ],
+      "@my-nx-monorepo/question-randomizer-shared-util": [
+        "libs/question-randomizer/shared/util/src/index.ts"
+      ],
       "@my-nx-monorepo/shared-ui": ["libs/shared/ui/shared-ui/src/index.ts"],
       "@my-nx-monorepo/shared-util": ["libs/shared/util/src/index.ts"]
     }
