Email verification pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@my-nx-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "qr": "nx serve question-randomizer"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~19.2.0",
