--- a/libs/shared/ui/project.json
+++ b/libs/shared/ui/project.json
@@ -1,7 +1,7 @@
 {
   "name": "shared-ui",
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/ui/shared-ui/src",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/shared/ui/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": [],
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/ui/shared-ui/jest.config.ts"
+        "jestConfig": "libs/shared/ui/jest.config.ts"
       }
     },
     "lint": {
