--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -42,6 +42,9 @@
       "@my-nx-monorepo/question-randomizer-dashboard-qualification-ui": [
         "libs/question-randomizer/dashboard/qualification/ui/src/index.ts"
       ],
+      "@my-nx-monorepo/question-randomizer-dashboard-question-data-access": [
+        "libs/question-randomizer/dashboard/question/data-access/src/index.ts"
+      ],
       "@my-nx-monorepo/question-randomizer-dashboard-question-feature": [
         "libs/question-randomizer/dashboard/question/feature/src/index.ts"
       ],
