--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "@angular/compiler-cli": "~19.2.0",
     "@angular/language-service": "~19.2.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.6.0",
-    "@nx/devkit": "20.6.0",
-    "@nx/eslint": "20.6.0",
-    "@nx/eslint-plugin": "20.6.0",
-    "@nx/jest": "20.6.0",
-    "@nx/js": "20.6.0",
-    "@nx/playwright": "20.6.0",
-    "@nx/web": "20.6.0",
-    "@nx/workspace": "20.6.0",
+    "@nx/angular": "20.8.0",
+    "@nx/devkit": "20.8.0",
+    "@nx/eslint": "20.8.0",
+    "@nx/eslint-plugin": "20.8.0",
+    "@nx/jest": "20.8.0",
+    "@nx/js": "20.8.0",
+    "@nx/playwright": "20.8.0",
+    "@nx/web": "20.8.0",
+    "@nx/workspace": "20.8.0",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~19.2.0",
     "@swc-node/register": "~1.9.1",
@@ -44,12 +44,12 @@
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.2.0",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
-    "nx": "20.6.0",
+    "nx": "20.8.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
