--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
     "@ngrx/signals": "^19.0.1",
+    "angular-svg-icon": "^19.1.1",
     "ngx-quill": "^27.0.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
