--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ngrx/signals": "^19.0.1",
     "angular-svg-icon": "^19.1.1",
     "ngx-quill": "^27.0.2",
+    "papaparse": "^5.5.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -43,6 +44,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "@types/papaparse": "^5.3.15",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.2.0",
     "eslint": "^9.8.0",
