--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -63,6 +63,9 @@
       "@my-nx-monorepo/question-randomizer-dashboard-randomization-util": [
         "libs/question-randomizer/dashboard/randomization/util/src/index.ts"
       ],
+      "@my-nx-monorepo/question-randomizer-dashboard-settings-shell": [
+        "libs/question-randomizer/dashboard/settings/shell/src/index.ts"
+      ],
       "@my-nx-monorepo/question-randomizer-dashboard-shared-data-access": [
         "libs/question-randomizer/dashboard/shared/data-access/src/index.ts"
       ],
