--- a/apps/question-randomizer/project.json
+++ b/apps/question-randomizer/project.json
@@ -72,7 +72,8 @@
           "buildTarget": "question-randomizer:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "continuous": true
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
@@ -87,7 +88,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/question-randomizer/jest.config.ts"
+        "jestConfig": "apps/question-randomizer/jest.config.ts",
+        "tsConfig": "apps/question-randomizer/tsconfig.spec.json"
       }
     },
     "serve-static": {
