--- a/libs/question-randomizer/dashboard/settings/shell/project.json
+++ b/libs/question-randomizer/dashboard/settings/shell/project.json
@@ -10,7 +10,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/question-randomizer/dashboard/settings/shell/jest.config.ts"
+        "jestConfig": "libs/question-randomizer/dashboard/settings/shell/jest.config.ts",
+        "tsConfig": "libs/question-randomizer/dashboard/settings/shell/tsconfig.spec.json"
       }
     },
     "lint": {
