--- a/apps/question-randomizer-e2e/project.json
+++ b/apps/question-randomizer-e2e/project.json
@@ -3,7 +3,13 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/question-randomizer-e2e/src",
-  "implicitDependencies": ["question-randomizer"],
+  "implicitDependencies": [
+    "question-randomizer"
+  ],
   "// targets": "to see all targets run: nx show project question-randomizer-e2e --web",
-  "targets": {}
+  "targets": {},
+  "tags": [
+    "type:e2e",
+    "scope:question-randomizer"
+  ]
 }
