--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@my-nx-monorepo/source",
+  "name": "@worse-and-pricier/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
