--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "@my-nx-monorepo/source",
+  "name": "@worse-and-pricier/source",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "targets": {
     "local-registry": {
