refactor(nx): align workspace with Nx best practices
Improved scope tagging strategy and module boundary enforcement:

**Scope Tags:**
- Simplified to flat domain-based naming (removed unnecessary hierarchy)
- Changed scope:question-randomizer-shared → scope:shared for clarity
- Scope tags now represent domain boundaries, not folder structure
- Dashboard folder recognized as organizational namespace only

**Module Boundaries:**
- Added horizontal slicing rules to prevent cross-domain dependencies
- Dashboard domains (question, category, qualification, randomization,
  interview, settings) cannot depend on each other
- Enforces bounded contexts and prevents coupling between domains
- All domains can access dashboard-shared for cross-cutting concerns

**Documentation:**
- Updated CLAUDE.md with comprehensive scope tag structure
- Clarified distinction between folder organization and domain boundaries
- Added domain isolation rules explanation
- Removed reference to non-existent workspace-level shared/util

Files modified:
- eslint.config.mjs: +61 lines (domain isolation constraints)
- CLAUDE.md: Updated scope tag documentation
- 2 project.json files: Simplified scope tags

This change ensures the workspace fully aligns with Nx philosophy for
domain-driven design and module boundary enforcement.

--- a/libs/question-randomizer/shared/data-access/project.json
+++ b/libs/question-randomizer/shared/data-access/project.json
@@ -6,7 +6,7 @@
   "projectType": "library",
   "tags": [
     "type:data-access",
-    "scope:question-randomizer-shared"
+    "scope:shared"
   ],
   "targets": {
     "test": {
