--- a/libs/question-randomizer/shared/util/project.json
+++ b/libs/question-randomizer/shared/util/project.json
@@ -6,7 +6,7 @@
   "projectType": "library",
   "tags": [
     "type:util",
-    "scope:question-randomizer-shared"
+    "scope:shared"
   ],
   "targets": {
     "test": {
